--- a/404.html
+++ b/404.html
@@ -1,87 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404 - Page Not Found</title>
-    <style>
-        /* Global Styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nice Try...</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            text-align: center;
-            color: #333;
-        }
+    body {
+      font-family: 'Share Tech Mono', monospace;
+      background-color: #0d0d0d;
+      color: #00ff9d;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
+      margin: 0;
+    }
 
-        .container {
-            width: 100%;
-            max-width: 600px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
+    .container {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,255,157,0.6);
+      animation: flicker 2s infinite alternate;
+    }
 
-        .content {
-            margin: 0 auto;
-        }
+    .glitch {
+      font-size: 42px;
+      font-weight: bold;
+      text-transform: uppercase;
+      position: relative;
+      display: inline-block;
+    }
 
-        .error-code {
-            font-size: 60px; /* Reduced font size */
-            font-weight: bold;
-            color: #e74c3c;
-            margin-bottom: 20px;
-        }
+    .glitch::before, .glitch::after {
+      content: attr(data-text);
+      position: absolute;
+      left: 0;
+      right: 0;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+    }
 
-        .error-message {
-            font-size: 18px;
-            color: #555;
-            margin-bottom: 20px;
-        }
+    .glitch::before {
+      top: -2px;
+      left: 2px;
+      color: #ff005c;
+      animation: glitchTop 1.5s infinite linear alternate-reverse;
+    }
 
-        .back-link a {
-            font-size: 16px;
-            color: #3498db;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
+    .glitch::after {
+      top: 2px;
+      left: -2px;
+      color: #00fff7;
+      animation: glitchBottom 1.2s infinite linear alternate-reverse;
+    }
 
-        .back-link a:hover {
-            color: #2980b9;
-        }
+    @keyframes glitchTop {
+      0% { clip: rect(0, 9999px, 0, 0); }
+      50% { clip: rect(0, 9999px, 100%, 0); }
+      100% { clip: rect(0, 9999px, 0, 0); }
+    }
 
-        @media (max-width: 480px) {
-            .error-code {
-                font-size: 50px; /* Further reduce font size for small screens */
-            }
+    @keyframes glitchBottom {
+      0% { clip: rect(100%, 9999px, 100%, 0); }
+      50% { clip: rect(0, 9999px, 100%, 0); }
+      100% { clip: rect(100%, 9999px, 100%, 0); }
+    }
 
-            .error-message {
-                font-size: 16px;
-            }
+    @keyframes flicker {
+      0% { box-shadow: 0 0 5px rgba(0,255,157,0.2); }
+      100% { box-shadow: 0 0 25px rgba(0,255,157,0.9); }
+    }
 
-            .back-link a {
-                font-size: 14px;
-            }
-        }
-    </style>
+    .tease {
+      font-size: 18px;
+      margin-top: 20px;
+      color: #aaa;
+    }
+
+    .tease span {
+      color: #ff005c;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="content">
-            <h1 class="error-code">Coming soon..!!</h1>
-            <p class="error-message">We will update you once it is available.</p>
-        </div>
-    </div>
+  <div class="container">
+    <h1 class="glitch" data-text="ACCESS DENIED">ACCESS DENIED</h1>
+    <p class="tease">Congrats, you found the hidden door... but <span>that’s all you get 😏</span></p>
+    <p class="tease">Better luck next exploit.</p>
+  </div>
 </body>
 </html>
